changed thumbnails layout

--- a/EyeRecorder/RecorderApp/RecorderApp.csproj
+++ b/EyeRecorder/RecorderApp/RecorderApp.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Utility\MediaWatchEvent.cs" />
     <Compile Include="Utility\RecStatusEvent.cs" />
     <Compile Include="Utility\SavePathEvent.cs" />
+    <Compile Include="Utility\StringToURI.cs" />
     <Compile Include="Utility\TimeWatchEvent.cs" />
     <Compile Include="ViewModels\CleanDataViewModel.cs" />
     <Compile Include="ViewModels\DynamicGridViewModel.cs" />
@@ -106,6 +107,9 @@
     </Compile>
     <Compile Include="Views\ResultsView.xaml.cs">
       <DependentUpon>ResultsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\GazeTrackerView.xaml">
       <SubType>Designer</SubType>
@@ -140,6 +144,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ResultsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
