--- a/EyeRecorder/RecorderApp/RecorderApp.csproj
+++ b/EyeRecorder/RecorderApp/RecorderApp.csproj
@@ -87,16 +87,19 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\Fixation.cs" />
+    <Compile Include="Models\ImageBtns.cs" />
     <Compile Include="Models\RawGaze.cs" />
     <Compile Include="Models\VideoClip.cs" />
     <Compile Include="Utility\CalibrationEvent.cs" />
     <Compile Include="Utility\FilenameConverter.cs" />
     <Compile Include="Utility\ListboxWatchEvent.cs" />
+    <Compile Include="Utility\LoadedClipsEvent.cs" />
     <Compile Include="Utility\MediaWatchEvent.cs" />
     <Compile Include="Utility\RecStatusEvent.cs" />
     <Compile Include="Utility\SavePathEvent.cs" />
     <Compile Include="Utility\StringToURI.cs" />
     <Compile Include="Utility\TimeWatchEvent.cs" />
+    <Compile Include="Utility\VisibilityConverter.cs" />
     <Compile Include="ViewModels\CleanDataViewModel.cs" />
     <Compile Include="ViewModels\DynamicGridViewModel.cs" />
     <Compile Include="ViewModels\IVTViewModel.cs" />
@@ -107,9 +110,6 @@
     </Compile>
     <Compile Include="Views\ResultsView.xaml.cs">
       <DependentUpon>ResultsView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\GazeTrackerView.xaml">
       <SubType>Designer</SubType>
@@ -144,10 +144,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ResultsView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Window1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -201,10 +197,13 @@
     <Resource Include="Assets\logo2.png" />
     <Resource Include="Assets\logo3.png" />
     <Resource Include="Assets\logo4.png" />
-    <Resource Include="logo3.png" />
     <Resource Include="favicon.ico" />
+    <Resource Include="Assets\happy.png" />
+    <Resource Include="Assets\neutral.png" />
+    <Resource Include="Assets\sad.png" />
     <Content Include="Scripts\extractFrames.py" />
     <Content Include="Scripts\extractScenes.py" />
+    <Content Include="Scripts\getHeatmap.py" />
     <Content Include="Scripts\groupFixations.py" />
     <Content Include="Tobii.EyeX.Client.dll" />
   </ItemGroup>
